# TAaFL-L

./: .gitignore  README.md  lab1.manifest.yaml  lab2.manifest.yaml  lab3.manifest.yaml  lab4.manifest.yaml  lab5.manifest.yaml
converter/: CMakeLists.txt  converter.cpp  converter.h
lw3/: main.py
lw4/: main.py
lw5/: main.py
lw6/: main.py
minim/: CMakeLists.txt  minim.cpp  minim.h
minim/minim/: minim.cpp
